# platform

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  struct_platform.txt
libs/hivemind/: hivemind.h
libs/hivemind/hivemind/: api.h  callbacks.h  hivemind.h  types.h  version.h
ui/android/: settings.gradle.kts
ui/android/app/: build.gradle.kts
ui/android/app/src/androidTest/java/com/hivemind/platform/: ExampleInstrumentedTest.kt
ui/android/app/src/main/: AndroidManifest.xml
ui/android/app/src/main/java/com/hivemind/platform/: MainActivity.kt
ui/android/app/src/main/java/com/hivemind/platform/ui/theme/: Color.kt  Theme.kt  Type.kt
ui/android/app/src/test/java/com/hivemind/platform/: ExampleUnitTest.kt
ui/android/gradle/wrapper/: gradle-wrapper.properties
ui/console/: CMakeLists.txt  main.cpp
ui/desktop/: main.cpp
